$Id$

2005-04-26 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugins/pop3/pop3.c: Send CRLF after QUIT, too

2005-03-25 Tilman Sauerbeck (tilman at code-monkey de)
        * README: documented the force-mailbox-check feature

2005-03-25 Tilman Sauerbeck (tilman at code-monkey de)
        * Released version 0.0.2

2005-03-25 Tilman Sauerbeck (tilman at code-monkey de)
        * configure.ac, src/Makefile.am: Check for EDB and include EDB CFLAGS
          and LIBS

2005-03-22 Tilman Sauerbeck (tilman at code-monkey de)
        * src/embrace.c, data/themes/default/Makefile.am:
          The default extension for Edje files is 'edj' now

2005-02-06 Tilman Sauerbeck (tilman at code-monkey de)
        * data/themes/default/embrace.edc,
          data/themes/default/parts/mailbox_background.edc,
          data/themes/default/parts/mailbox_icon.edc,
          src/embrace.c: Fixed the force-mailbox-check feature.

2005-01-30 Tilman Sauerbeck (tilman at code-monkey de)
        * src/mailbox.c, data/themes/default/programs/mailbox.edc:
          Force a mailbox check on right-click on the "icon" part

2005-01-30 Tilman Sauerbeck (tilman at code-monkey de)
        * Released version 0.0.1

2005-01-30 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugins/sylpheed/sylpheed.c:
          Fixed the Sylpheed plugin, which was horribly broken
        * configure.ac, m4/ac_ecore_con_check_openssl.m4,
          src/plugins/pop3/pop3.c, src/plugins/imap/imap.c:
          HAVE_ECORE_CON_OPENSSL was superseeded by
          ecore_con_ssl_available_get()
        * m4/Makefile.am: ac_ecore_con_check_openssl.m4 removed
        * src/plugins/sylpheed.c: Fixed a memory leak

2005-01-29 Tilman Sauerbeck (tilman at code-monkey de)
        * configure.ac, src/plugins/sylpheed:
          Added Phillip Warner's Sylpheed plugin

2004-05-09 Tilman Sauerbeck (tilman at code-monkey de)
        * src/embrace.c: Added standard arguments -h and